--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width">
     <meta name="viewport" content="initial-scale=1.0">
 
-    <link rel="stylesheet" media="all" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <!--link rel="stylesheet" media="all" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" media="all" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.css">
     <link rel="stylesheet" media="all" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
     <link rel="stylesheet" media="all" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
@@ -20,7 +20,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="application/javascript"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" type="application/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js" type="application/javascript"></script>
-    <script src="{{ static('javascript/app.js') }}" type="application/javascript"></script>
+    <script src="{{ static('javascript/app.js') }}" type="application/javascript"></script-->
+
+	<link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700" rel="stylesheet" type="text/css">
+	<link href="http://fonts.googleapis.com/css?family=Lora:400,400italic|Open+Sans|Roboto|Source+Sans+Pro" rel="stylesheet" type="text/css">
 
     {% block headers %}
     {% endblock %}
@@ -31,4 +34,6 @@
     {% block content %}
     {% endblock %}
 </body>
+	{% block scripts %}
+	{% endblock %}
 </html>
