--- a/templates/index.html
+++ b/templates/index.html
@@ -11,13 +11,31 @@
 	</div>
 	<div class="grid">
 		<div class="grid-item turquoise height2" data-remove="2" data-expandable="0">2</div>
-		<div class="grid-item lightTurquoise width2 height2" data-remove="2" data-expandable="1">0</div>
-		<div class="grid-item blue width2 height2" data-remove="0" data-expandable="1">0
+		<div class="grid-item lightTurquoise width2 height2" data-remove="2" data-expandable="1">
 			<div class="basic-info">
-				Click me!
+				<h1>
+					Venue
+				</h1>
+					<p>This year, we’re returning to Detroit, somewhere we haven’t been since MHacks III. The Masonic Temple in Detroit is the largest in the world. </p>
 			</div>
 			<div class="extra-info">
-				Here's some extra info!
+				<p>
+					 Built in 1922, this historic building is the perfect setting for a weekend in a city thriving with renewed entrepreneurial spirit. We hope you use this energy to drive your hacks.
+				</p>	
+			</div>
+
+		</div>
+		<div class="grid-item blue width2 height2" data-remove="0" data-expandable="1">
+			<div class="basic-info">
+				<h1>
+				What is MHacks?
+				</h1>
+				<p>MHacks is a 36-hour hackathon hosted by University of Michigan students. </p>
+			</div>
+			<div class="extra-info">
+				<p>
+					 You and 2,500 others will gather from around the world and we’ll provide you with everything you need to be as curious, productive, and passionate as you can be. Whether it’s your first time hacking or your 8th, MHacks is the place to be.
+				</p>	
 			</div>
 		</div>
 		<div class="grid-item lightTurquoise" data-remove="0" data-expandable="0">1</div>
@@ -27,7 +45,7 @@
 		<div class="grid-item lightBlue" data-remove="2" data-expandable="1">2</div>
 		<div class="grid-item blue" data-remove="1" data-expandable="0">1</div>
 		<div class="grid-item lightBlue" data-remove="1" data-expandable="0">1</div>
-		<div class="grid-item turquoise width2 height2" data-remove="0" data-expandable="1">0</div>
+		<div class="grid-item turquoise width2 height2" data-remove="0" data-expandable="2">FAQ</div>
 		<div class="grid-item lightTurquoise" data-remove="1" data-expandable="0">1</div>
 		<div class="grid-item blue height2" data-remove="1" data-expandable="1">1</div>
 		<div class="grid-item turquoise width2" data-remove="1" data-expandable="0">2</div>
