Updated application link on main page

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
         <div class="header turquoise">
             <h1>MHacks 8</h1>
             <h1>October 7-9 • Masonic Temple, Detroit</h1>
-            <a href="{{ url_for('mhacks-register') }}">Apply!</a>
+            <a href="{{ url_for('mhacks-apply') }}">Apply!</a>
         </div>
         <div class="grid">
             <div id="logo" class="lightBlue stamp">
