--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block content %}
-    <!--canvas id="bgCanvas" class="background"></canvas-->
-    <div class="container">
+    <canvas id="bgCanvas"></canvas>
+    <div id="container">
         <div class="header turquoise">
             <h1>MHacks 8</h1>
             <h1>October 7-9 • Masonic Temple, Detroit</h1>
