--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -47,6 +47,11 @@ p {
     padding-left: 7px;
 }
 
+a {
+    position:relative;
+    z-index:99999;
+}
+
 /* --- constants ---
  *
  * Height: 120px
@@ -71,8 +76,7 @@ p {
 }
 
 .header {
-    height: 120px; /*205*/
-    width: 160px;
+    height: 240px; /*205*/
     text-align: center;
     padding: 0;
     width: 100%;
@@ -103,6 +107,31 @@ p {
 .header a:active{
     font-size: 13pt;
     padding: 2px 5px;
+}
+
+.sponsors {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.sponsors .quote {
+    border-left: 6px solid rgba(128, 128, 128, 0.35);
+    padding-left: 10px;
+    text-align:left;
+    padding-top:0;
+    margin: 4px 0;
+    width: 80%;
+}
+
+.sponsors .logos {
+    width: 100%;
+    /*display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;*/
 }
 
 /* ---- grid ---- */
