--- a/templates/index.html
+++ b/templates/index.html
@@ -16,30 +16,14 @@
             <!--div id="logo" class="lightBlue stamp">
 
             </div-->
-            <div class="grid-item turquoise height2" data-remove="2" data-expandable="0">
+            <div class="grid-item darkBlue height2" data-remove="2" data-expandable="0">
                 <div class="grid-item-content">
 
                 </div>
             </div>
-            <div class="grid-item lightTurquoise width2 height2" data-remove="0" data-expandable="1">
+            <div class="grid-item lightTurquoise width2 height2" data-remove="1" data-expandable="0">
                 <div class="grid-item-content">
-                    <div class="basic-info">
-                        <h1>Venue</h1>
-                        <p>
-                            This year, we’re returning to Detroit, somewhere we haven’t been since MHacks III. The
-                            Masonic
-                            Temple in Detroit is the largest in the world.
-                        </p>
-                    </div>
-                    <div class="extra-info">
-                        <p>
-                            Built in 1922, this historic building is the perfect setting for a weekend in a city
-                            thriving
-                            with renewed entrepreneurial spirit. We hope you use this energy to drive your hacks.
-                        </p>
-                    </div>
                 </div>
-
             </div>
             <div class="grid-item blue width2 height2" data-remove="0" data-expandable="1">
                 <div class="grid-item-content">
@@ -66,29 +50,25 @@
                 <div class="grid-item-content">
                 </div>
             </div>
+            <div class="grid-item darkBlue" data-remove="1" data-expandable="0">
+                <div class="grid-item-image">
+                    <img class="tile-image" src="{{ static('assets/webic-05.png') }}">
+                </div>
+            </div>
             <div class="grid-item turquoise" data-remove="2" data-expandable="0">
                 <div class="grid-item-content">
                 </div>
             </div>
-            <div class="grid-item lightBlue" data-remove="0" data-expandable="1">
-                <div class="grid-item-content">
-                    <div class="basic-info">
-                        <h1>Schedule</h1>
-                    </div>
-                    <div class="extra-info">
-                        <p>~~Need Styling~~</p>
-                        <p>Friday afternoon: buses to Masonic Temple, check-in, sponsor expo</p>
-                        <p>Friday evening: opening ceremony, hacking starts</p>
-                        <p>Saturday: hacking, tech talks, workshops, and events</p>
-                        <p>Sunday morning: hacking ends, hacker expo, closing ceremony</p>
-                    </div>
-                </div>
-            </div>
             <div class="grid-item blue" data-remove="1" data-expandable="0">
+                <div class="grid-item-image">
+                    <img class="tile-image" src="{{ static('assets/webic-06.png') }}">
+                </div>
+            </div>
+            <div class="grid-item lightBlue height3" data-remove="2" data-expandable="0">
                 <div class="grid-item-content">
                 </div>
             </div>
-            <div class="grid-item lightBlue" data-remove="2" data-expandable="1">
+            <div class="grid-item darkBlue" data-remove="2" data-expandable="0">
                 <div class="grid-item-content">
                 </div>
             </div>
@@ -96,7 +76,15 @@
                 <div class="grid-item-content">
                 </div>
             </div>
-            <div class="grid-item lightBlue" data-remove="1" data-expandable="0">
+            <div class="grid-item lightBlue" data-remove="2" data-expandable="0">
+                <div class="grid-item-content">
+                </div>
+            </div>
+            <div class="grid-item lightTurquoise width2" data-remove="2" data-expandable="0">
+                <div class="grid-item-content">
+                </div>
+            </div>
+            <div class="grid-item darkBlue" data-remove="1" data-expandable="0">
                 <div class="grid-item-content">
                 </div>
             </div>
@@ -265,8 +253,13 @@
                     </div>
                 </div>
             </div>
-            <div class="grid-item lightTurquoise" data-remove="1" data-expandable="0">
+            <div class="grid-item lightTurquoise height2 width2" data-remove="2" data-expandable="0">
                 <div class="grid-item-content">
+                </div>
+            </div>
+            <div class="grid-item lightBlue" data-remove="1" data-expandable="0">
+                <div class="grid-item-image">
+                    <img class="tile-image" src="{{ static('assets/webic-07.png') }}">
                 </div>
             </div>
             <div class="grid-item blue height2" data-remove="1" data-expandable="0">
@@ -277,7 +270,7 @@
                 <div class="grid-item-content">
                     <div class="basic-info" style="text-align:center;">
                         <h1 style="text-align:left;">Presented by:</h1>
-                        <img style="height:260px" src="{{ static('assets/logo.png') }}">
+                        <img style="height:260px; margin-left:-20px;" src="{{ static('assets/logo.png') }}">
                     </div>
                 </div>
             </div>
@@ -322,20 +315,19 @@
                 <div class="grid-item-content">
                 </div>
             </div>
-            <div class="grid-item lightBlue width2 height2" data-remove="0" data-expandable="0">
+            <div class="grid-item lightBlue width2" data-remove="0" data-expandable="0">
                 <div class="grid-item-content">
                     <div class="basic-info">
-                        <h1>Links</h1>
-                        <ul>
-                            <li><a href="https://twitter.com/mhacks">MHacks Twitter</a></li>
-                            <li><a href="https://www.facebook.com/MHacksHackathon/">MHacks Facebook</a></li>
-                            <li><a href="mailto:hackathon@umich.edu">hackathon@umich.edu</a></li>
-                        </ul>
-                        <p>~~Lemme know what links this is missing~~</p>
+                        <h1>Contact Us</h1>
+                        <div class="contact-links">
+                            <a href="https://twitter.com/mhacks"><img src="{{ static('assets/twitter-link.png') }}" /></a>
+                            <a href="https://www.facebook.com/MHacksHackathon/"><img src="{{ static('assets/fb-link.png') }}" /></a>
+                            <a href="mailto:hackathon@umich.edu"><img src="{{ static('assets/email-link.png') }}" /></a>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="grid-item turquoise" data-remove="1" data-expandable="0">
+            <div class="grid-item turquoise" data-remove="2" data-expandable="0">
                 <div class="grid-item-content">
                 </div>
             </div>
@@ -343,11 +335,16 @@
                 <div class="grid-item-content">
                 </div>
             </div>
-            <div class="grid-item blue" data-remove="1" data-expandable="0">
+            <div class="grid-item darkBlue" data-remove="1" data-expandable="0">
+                <div class="grid-item-image">
+                    <img class="tile-image" src="{{ static('assets/webic-10.png') }}">
+                </div>
+            </div>
+            <div class="grid-item blue" data-remove="2" data-expandable="0">
                 <div class="grid-item-content">
                 </div>
             </div>
-            <div class="grid-item darkBlue" data-remove="1" data-expandable="0">
+            <div class="grid-item lightTurquoise" data-remove="1" data-expandable="0">
                 <div class="grid-item-content">
                 </div>
             </div>
@@ -355,12 +352,12 @@
         <div class="turquoise sponsors">
             <h1>Sponsorship</h1>
             <p>MHacks is the gateway between you and the top tech talent in the world. Whether you come to network, promote brand awareness, or get feedback on a product or API, we’ll provide the tools you need to make the most out of your experience.</p>
-            <p class="quote"><i>“MHacks has been a staple event in Concur’s University Tour over the past two years. The MHacks atmosphere fosters creativity and innovation from developers and entrepreneurs alike. When it comes to collegiate hackathons, MHacks is the place to be!”</i> -Concur</p>
-            <p class="quote"><i>“The caliber and number of students that MHacks attracts is like no other hacking event.”</i> -Walmart</p>
-            <p class="quote"><i>“This was one of the most well organized student-run hackathons that we’ve ever sponsored.”</i> -Google</p>
-            <p>Interested in sponsoring? Want more information? Shoot us an email at<br/><a href="mailto:hackathon@umich.edu">hackathon@umich.edu</a>
+            <p class="quote"><i>“MHacks has been a staple event in Concur’s University Tour over the past two years. The MHacks atmosphere fosters creativity and innovation from developers and entrepreneurs alike. When it comes to collegiate hackathons, MHacks is the place to be!”</i><br/><span style="text-align: left; margin-left: 50px"><b>-Concur</b></span></p>
+            <p class="quote"><i>“The caliber and number of students that MHacks attracts is like no other hacking event.”</i><br/><span style="text-align: left; margin-left: 50px"><b>-Walmart</b></span></p>
+            <p class="quote"><i>“This was one of the most well organized student-run hackathons that we’ve ever sponsored.”</i><br/><span style="text-align: left; margin-left: 50px"><b>-Google</b></span></p>
+            <p> Interested in sponsoring? Want more information? Shoot us an email at<br/><a href="mailto:hackathon@umich.edu">hackathon@umich.edu</a>
                 <!--<br/><br/>We have an awesome lineup of sponsors for you.<br/>Check back soon for company logos.--></p>
-            <h2>MHacks 8 Sponsors</h2>
+            <!--h2>MHacks 8 Sponsors</h2>
             <div class="logos">
                 <img style="height:120px" src="{{ static('assets/logo.png') }}">
                 <img style="height:120px" src="{{ static('assets/logo.png') }}">
@@ -375,7 +372,7 @@
                 <img style="height:120px" src="{{ static('assets/logo.png') }}">
                 <img style="height:120px" src="{{ static('assets/logo.png') }}">
                 <img style="height:120px" src="{{ static('assets/logo.png') }}">
-            </div>
+            </div-->
             <h2>Previous Sponsors</h2>
             <div class="logos">
                 <img style="height:120px" src="{{ static('assets/logo.png') }}">
