--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -1,6 +1,6 @@
 body {
 	background-color: #ffffff;
-	    margin: 0;
+	margin: 0;
     overflow-x: hidden;
     overflow-y: auto;
     font-size: 12pt;
@@ -15,4 +15,9 @@ body {
 
 .header-apply{
     height: 120px; 
+}
+
+.application-text{
+	color: #000;
+	font-size: 16pt;
 }
