--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -552,3 +552,16 @@ html button {
     margin-top: 80px;
 }
 
+.drop-down-button{
+   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+     margin-left: auto;
+    margin-right: auto;
+    border: 1px solid  rgba(0,0,0,0.33);
+    border-radius: 0px;
+    background-color: #fff;
+}
+
+.full_width{
+    width: 100%;
+}
+
