--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -443,7 +443,7 @@ li.answer {
 .container_apply {
     width: 50%;
     margin-top: 50px;
-    height: 500px;
+    height: 1000px;
 -webkit-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 -moz-box-shadow:0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
@@ -558,6 +558,9 @@ html button {
     margin-top: 80px;
 }
 
+.row.none{
+    margin-top: 0px;
+}
 .drop-down-button{
    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
      margin-left: auto;
