--- a/templates/apply.html
+++ b/templates/apply.html
@@ -1,93 +1,107 @@
 {% extends 'base.html' %}
 
 {% block headers %}
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" media="all" href="{{ static('stylesheets/main.css') }}">
-    <link rel="stylesheet" media="all" href="{{ static('stylesheets/application.css') }}">
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+<link rel="stylesheet" media="all" href="{{ static('stylesheets/main.css') }}">
+<link rel="stylesheet" media="all" href="{{ static('stylesheets/application.css') }}">
 
 
 {% endblock %}
 
 {% block content %}
- <form id="application-form" class="form-horizontal" method="POST" action="/application" novalidate>
+<form id="application-form" class="form-horizontal" method="POST" action="/application" novalidate>
 
     <div id="container" >
         <div class="header header-apply turquoise">
-              <div id="logo" class = "logo">
-                <img style="height:120px" src="{{ static('assets/logo.png') }}">
-            </div>
+          <div id="logo" class = "logo">
+            <img style="height:120px" src="{{ static('assets/logo.png') }}">
         </div>
-            <div class="container container_apply">
-                <div class="row">
-                    <div class="col-12 text-center title-apply">
-                        <h1>General Info</h1>
-                    </div>
+    </div>
+    <div class="container container_apply">
+        <div id="generalinfo">
+            <div class="row">
+                <div class="col-12 text-center title-apply">
+                    <div class="application-title darkblue">General Info</div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-12 text-center ">
-                        <input placeholder="First Name" value="" id="first-name" name="first-name" type="text" class="form-control input-md" required="">
-                    </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 text-center ">
+                    <input placeholder="First Name" value="" id="first-name" name="first-name" type="text" class="form-control input-md" required="">
                 </div>
-                 <div class="row">
-                    <div class="col-lg-12 text-center ">
-                        <input placeholder="Last Name" value="" id="last-name" name="last-name" type="text" class="form-control input-md" required="">
-                    </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 text-center ">
+                    <input placeholder="Last Name" value="" id="last-name" name="last-name" type="text" class="form-control input-md" required="">
                 </div>
-                <div class="row ">
-                    <div class="col-lg-12 text-center ">
-                        <input placeholder="Email Address" value="" id="email" name="email" type="email" class="form-control input-md" required="">
-                    </div>
+            </div>
+            <div class="row ">
+                <div class="col-lg-12 text-center ">
+                    <input placeholder="Email Address" value="" id="email" name="email" type="email" class="form-control input-md" required="">
                 </div>
-                <div class="row two">
-                    <div class="col-lg-6 ">
-                        <input placeholder="University" value="" id="university" name="university" type="text" class="form-control input-md" required="">
-                    </div>
-                     <div class="col-lg-6 ">
-                            <label style="color:#000; opacity:.7" class="checkbox-inline" ><input type="checkbox" name="high-school" id="high-school" value="no">
-                               I am a highschool student</label>
-                    </div>
+            </div>
+            <div class="row two">
+                <div class="col-lg-6 ">
+                    <input placeholder="University" value="" id="university" name="university" type="text" class="form-control input-md" required="">
                 </div>
-                <div class="row two">
-                    <div class="col-lg-6 ">
-                        <div class="dropdown ">
-                          <button class="btn dropdown-toggle drop-down-button full_width" type="button" data-toggle="dropdown">State
+                <div class="col-lg-6 ">
+                    <label style="color:#000; opacity:.7" class="checkbox-inline" ><input type="checkbox" name="high-school" id="high-school" value="no">
+                     I am a highschool student</label>
+                 </div>
+             </div>
+             <div class="row two">
+                <div class="col-lg-6 ">
+                    <div class="dropdown ">
+                      <button class="btn dropdown-toggle drop-down-button full_width" type="button" data-toggle="dropdown">State
                           <span class="caret"></span></button>
                           <ul class="dropdown-menu full_width">
                             <li><a href="#">Alabama</a></li>
                             <li><a href="#">Michigan</a></li>
                             <li><a href="#">Mississipi</a></li>
-                          </ul>
-                        </div>
+                        </ul>
                     </div>
-                   <div class="col-lg-2 "> 
-                        <input id="month" name="grad_month" placeholder="MM" type="number" min="01" max="12" maxlength="2" class="form-control input-md" required="" value=""> 
-                   </div> 
-                   <div class="col-lg-4">
-                     <input id="year" name="grad_year" placeholder="YYYY" type="number" min="2015" max="2020" maxlength="4" class="form-control input-md" required="" value=""> 
-                   </div>
+                </div>
+                <div class="col-lg-2 "> 
+                    <input id="month" name="grad_month" placeholder="MM" type="number" min="01" max="12" maxlength="2" class="form-control input-md" required="" value=""> 
+                </div> 
+                <div class="col-lg-4">
+                   <input id="year" name="grad_year" placeholder="YYYY" type="number" min="2015" max="2020" maxlength="4" class="form-control input-md" required="" value=""> 
                </div>
-                <div class="row two">
-                      <div class="col-lg-4">
-                        <div class="application-text text-center"> Age: </div>
-                    </div>
-                     <div class="col-lg-2">
-                        <input name="birth_month" placeholder="MM" type="number" min="01" max="12" class="form-control input-md" maxlength="2" required="" id="birthMonth">
-                    </div>
-                    <div class="col-lg-2">
-                         <input name="birth_day" placeholder="DD" type="number" min="01" max="31" class="form-control input-md" maxlength="2" required="" id="birthDay">
-                    </div>
-                     <div class="col-lg-4">
-                         <input name="birth_year" placeholder="YYYY" type="number" min="1900" ="2015" class="form-control input-md" maxlength="2"  required="" id="birthYear">
-                    </div>
-                  </div>
+           </div>
+           <div class="row two">
+              <div class="col-lg-4">
+                <div class="application-text text-center"> Age: </div>
+            </div>
+            <div class="col-lg-2">
+                <input name="birth_month" placeholder="MM" type="number" min="01" max="12" class="form-control input-md" maxlength="2" required="" id="birthMonth">
+            </div>
+            <div class="col-lg-2">
+               <input name="birth_day" placeholder="DD" type="number" min="01" max="31" class="form-control input-md" maxlength="2" required="" id="birthDay">
+           </div>
+           <div class="col-lg-4">
+               <input name="birth_year" placeholder="YYYY" type="number" min="1900" ="2015" class="form-control input-md" maxlength="2"  required="" id="birthYear">
+           </div>
+       </div>
+   </div>
 
+   <div id="demographicinfo">
+    <div class="row">
+        <div class="col-12 text-center title-apply">
+            <div class="application-title ">Demographic Info</div>
+        </div>
     </div>
+    <div class="row none">
+        <div class="col-12 text-center">
+            <div class="application-subtitle">Not Required</div>
+        </div>
+    </div>
+</div>
+</div>
 </form>
 {% endblock %}
 
 {% block scripts %}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"
-            type="application/javascript"></script>
-    <script src="http://mfzy.co/packery.pkgd.js" type="application/javascript"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"
+type="application/javascript"></script>
+<script src="http://mfzy.co/packery.pkgd.js" type="application/javascript"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 {% endblock %}
