Added previous sponsor logos, made expanded tiles more dynamic, small styling changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -266,18 +266,14 @@
                 <div class="grid-item-content">
                 </div>
             </div>
-            <div class="grid-item lightBlue width2 height3" data-remove="0" data-expandable="0">
+            <!--div class="grid-item lightBlue width2 height3" data-remove="0" data-expandable="0">
                 <div class="grid-item-content">
                     <div class="basic-info" style="text-align:center;">
                         <h1 style="text-align:left;">Presented by:</h1>
                         <img style="height:260px; margin-left:-20px;" src="{{ static('assets/logo.png') }}">
                     </div>
                 </div>
-            </div>
-            <div class="grid-item turquoise width2" data-remove="1" data-expandable="0">
-                <div class="grid-item-content">
-                </div>
-            </div>
+            </div-->
             <div class="grid-item darkBlue height2 width2" data-remove="0" data-expandable="1">
                 <div class="grid-item-content">
                     <div class="basic-info">
@@ -305,6 +301,10 @@
                             after.
                         </p>
                     </div>
+                </div>
+            </div>
+            <div class="grid-item turquoise width2" data-remove="1" data-expandable="0">
+                <div class="grid-item-content">
                 </div>
             </div>
             <div class="grid-item darkBlue" data-remove="1" data-expandable="0">
@@ -350,7 +350,7 @@
             </div>
         </div>
         <div class="turquoise sponsors">
-            <h1>Sponsorship</h1>
+            <h3>Sponsorship</h3>
             <p>MHacks is the gateway between you and the top tech talent in the world. Whether you come to network, promote brand awareness, or get feedback on a product or API, we’ll provide the tools you need to make the most out of your experience.</p>
             <p class="quote"><i>“MHacks has been a staple event in Concur’s University Tour over the past two years. The MHacks atmosphere fosters creativity and innovation from developers and entrepreneurs alike. When it comes to collegiate hackathons, MHacks is the place to be!”</i><br/><span style="text-align: left; margin-left: 50px"><b>-Concur</b></span></p>
             <p class="quote"><i>“The caliber and number of students that MHacks attracts is like no other hacking event.”</i><br/><span style="text-align: left; margin-left: 50px"><b>-Walmart</b></span></p>
@@ -373,21 +373,20 @@
                 <img style="height:120px" src="{{ static('assets/logo.png') }}">
                 <img style="height:120px" src="{{ static('assets/logo.png') }}">
             </div-->
-            <h2>Previous Sponsors</h2>
+            <h1 style="font-size:16pt">Previous Sponsors</h1>
             <div class="logos">
-                <img style="height:120px" src="{{ static('assets/logo.png') }}">
-                <img style="height:120px" src="{{ static('assets/logo.png') }}">
-                <img style="height:120px" src="{{ static('assets/logo.png') }}">
-                <img style="height:120px" src="{{ static('assets/logo.png') }}">
-                <img style="height:120px" src="{{ static('assets/logo.png') }}">
-                <img style="height:120px" src="{{ static('assets/logo.png') }}">
-                <img style="height:120px" src="{{ static('assets/logo.png') }}">
-                <img style="height:120px" src="{{ static('assets/logo.png') }}">
-                <img style="height:120px" src="{{ static('assets/logo.png') }}">
-                <img style="height:120px" src="{{ static('assets/logo.png') }}">
-                <img style="height:120px" src="{{ static('assets/logo.png') }}">
-                <img style="height:120px" src="{{ static('assets/logo.png') }}">
-                <img style="height:120px" src="{{ static('assets/logo.png') }}">
+                <img src="{{ static('assets/Apple_logo.png') }}">
+                <img src="{{ static('assets/cfe_logo.png') }}">
+                <img src="{{ static('assets/Disney_Logo.png') }}">
+                <img src="{{ static('assets/Esri_logo.png') }}">
+                <img src="{{ static('assets/Facebook_logo.jpg') }}">
+                <img src="{{ static('assets/Firebase_logo.png') }}">
+                <img src="{{ static('assets/intel_logo.png') }}">
+                <img src="{{ static('assets/Microsoft_logo.png') }}">
+                <img src="{{ static('assets/MongoDB_Logo.jpg') }}">
+                <img src="{{ static('assets/target_logo.png') }}">
+                <img src="{{ static('assets/twilio_logo.png') }}">
+                <img src="{{ static('assets/Visa_logo.png') }}">
             </div>
         </div>
     </div>
