--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -34,6 +34,18 @@ h2 {
     font-variant: small-caps;
 }
 
+h3 {
+    font-family: 'Ubuntu';
+    font-size: 18pt;
+    text-shadow: 0px 0px 50px rgba(0, 0, 0, 0.3);
+    letter-spacing: 0.4px;
+    font-weight: 400;
+    padding-top: 20px;
+    padding-left: 7px;
+    margin-top:0;
+    margin-bottom:0;
+}
+
 p {
     font-family: 'Source Sans Pro';
     font-size: 12pt;
@@ -47,11 +59,6 @@ p {
     padding-left: 7px;
 }
 
-a {
-    position:relative;
-    z-index:99999;
-}
-
 /* --- constants ---
  *
  * Height: 120px
@@ -59,15 +66,6 @@ a {
  *
  *
  */
-
-/*.background {
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-    z-index: -1000;
-}*/
 
 #container {
     margin-left: 0px;
@@ -94,7 +92,7 @@ a {
 
 .header a {
     background-color: #2190cb;
-    border: 1px solid white;
+    border: 2px solid #FFE641;
 
     font-size: 14pt;
     text-decoration: none;
@@ -134,17 +132,18 @@ a {
 
 .sponsors .logos {
     width: 100%;
-    /*display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;*/
+}
+
+.logos img {
+    max-height: 120px;
+    max-width: 300px;
+    margin: 5px 10px;
 }
 
 /* ---- grid ---- */
 
 .grid {
     width: 100%;
-    /*box-shadow: 0 0 30px rgba(32, 32, 32, 0.6);*/
 }
 
 /* clearfix */
@@ -179,9 +178,11 @@ a {
     padding-top: 0px;
     visibility: visible;
     transition: all 0.2s;
-    /*box-shadow: -2px 2px 15px 0px rgba(32, 32, 32, 0.1) inset;*/
-    /*box-shadow: -2px 2px 15px 0px white inset;*/
     border: 1px solid rgba(20, 20, 20, 0.1);
+}
+
+*[data-expandable='1'] .grid-item-content {
+    border: 5px solid #FFE641;
 }
 
 .width2.grid-item, .width2 .grid-item-content{
@@ -221,9 +222,7 @@ a {
 }
 
 .stamp {
-    /*left: 160px !important;
-    transition: all 0.2s;
-    cursor: pointer;*/
+
 }
 
 .apply-btn{
@@ -327,47 +326,47 @@ li.answer {
     text-align: center;
 }
 
-#bgContainer {
-    /*height: 100vh;
-    width: 100vw;*/
-    position: fixed;
-}
-
 #bgCanvas {
-    /*min-width: 100%;
-    min-height: 100%;
-    width: 100vw;
-    height: 100vh;*/
     z-index: -9999;
     position: absolute;
     float:left;
-    /*top: 50%;
-    left: 50%;*/
 }
 
-/*@media only screen and (max-width: 1441px) {
-    .grid-item-expand {
-        width: 960px;
+@media only screen and (min-width: 1140px){
+    .grid-item-expand{
+        width: 800px !important;
+        height: 480px !important;
     }
-}
 
-@media only screen and (max-width: 1281px) {
-    .grid-item-expand {
+    .grid-item-expand .grid-item-content{
         width: 800px;
+        height: 480px;
     }
 }
 
-@media only screen and (max-width: 1121px) {
-    .grid-item-expand {
+@media only screen and (max-width: 1140px){
+    .grid-item-expand{
+        width: 640px !important;
+        height: 480px !important;
+    }
+
+    .grid-item-expand .grid-item-content{
         width: 640px;
+        height: 480px;
     }
 }
 
-@media only screen and (max-width: 961px) {
-    .grid-item-expand {
-        width: 480px;
+@media only screen and (max-width: 820px){
+    .grid-item-expand{
+        width: 480px !important;
+        height: 360px !important;
     }
-}*/
+
+    .grid-item-expand .grid-item-content{
+        width: 480px;
+        height: 360px;
+    }
+}
 
 @media only screen and (max-width: 900px) {
     .grid-item[data-remove='2'] {
@@ -381,12 +380,6 @@ li.answer {
         display: none;
     }
 }
-
-/*@media only screen and (max-width: 801px) {
-    .grid-item-expand {
-        width: 320px;
-    }
-}*/
 
 @media only screen and (max-width: 700px) {
     #logo{
@@ -412,26 +405,3 @@ li.answer {
         width: 100% !important;
     }
 }
-
-/*@media only screen and (min-device-width: 414px)
-  and (max-device-width: 736px)
-  and (-webkit-min-device-pixel-ratio: 3){
-    .grid-item[data-remove='2']{
-        width: 0px;
-        height: 0px;
-        visibility: hidden;
-        transition: all 0.2s;
-    }
-    .grid-item[data-remove='1']{
-        width: 0px;
-        height: 0px;
-        visibility: hidden;
-        transition: all 0.2s;
-    }
-    .grid-item{
-	    width: 100%;
-    }
-    .logo{
-	    width: 100%;
-    }
-}*/
