--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -55,7 +55,7 @@ p {
     padding-top: 5px;
     line-height: 1.3;
     width: 92%;
-    pointer-events: none;
+    /*pointer-events: none;*/
     padding-left: 7px;
 }
 
